<resources>
    <string name="app_name">BINGO</string>
    <string name="bingo_frame">bingo frame</string>
    <string name="b1">0</string>
    <string name="b2">0</string>
    <string name="b3">0</string>
    <string name="b4">0</string>
    <string name="b5">0</string>
    <string name="i1">0</string>
    <string name="i2">0</string>
    <string name="i3">0</string>
    <string name="i4">0</string>
    <string name="i5">0</string>
    <string name="n1">0</string>
    <string name="n2">0</string>
    <string name="n3">0</string>
    <string name="n4">0</string>
    <string name="n5">0</string>
    <string name="g1">0</string>
    <string name="g2">0</string>
    <string name="g3">0</string>
    <string name="g4">0</string>
    <string name="g5">0</string>
    <string name="o1">0</string>
    <string name="o2">0</string>
    <string name="o3">0</string>
    <string name="o4">0</string>
    <string name="o5">0</string>
    <string name="new_card">New Card</string>
    <string name="play">Play</string>
    <string name="roll_button">Roll     </string>
    <string name="roll_text">0</string>
    <string name="roll_letter">0</string>
    <string name="box_to_keep_numbers_in">box to keep numbers in</string>
    <string name="one_player_button">One Player</string>
    <string name="oneP_activity">One_Player</string>
    <string name="player_v_cpu">Player v. CPU</string>
    <string name="free_space">FREE SPACE</string>
    <string name="classic_red_and_white_card">classic red and white card</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="n">N</string>
    <string name="g">G</string>
    <string name="o">O</string>
    <string name="_2_players">TWO PLAYERS</string>
    <string name="background_image">background image</string>
    <string name="props">props</string>
    <string name="win_anim">win_anim</string>
    <string name="stats">STATS</string>
    <string name="player_bingo">Player BINGO</string>
    <string name="cpu_bingo">CPU BINGO</string>
    <string name="draw">DRAW</string>
    <string name="Player_win">0</string>
    <string name="CPU_win">0</string>
    <string name="Draw">0</string>
    <string name="options">Options</string>
    <string name="classic_bingo">Classic Bingo</string>
    <string name="full_house">Full House</string>
    <string name="todo">(TODO)</string>
    <string name="x_marks_the_spot">X Marks The Spot</string>
    <string name="app_credit">Created by Odera Unigwe.</string>
    <string name="social_media_insta">Instagram: @oderathegoat</string>
</resources>
