<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_table_only_portrait"
    tools:context=".StatsActivity">

    <TextView
        android:id="@+id/numWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_bingo"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/numWinsCPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_bingo"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BINGO_num"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/numDraws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BINGOcpu_num"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/BINGO_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_win"
        android:textColor="@android:color/holo_green_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numWins" />

    <TextView
        android:id="@+id/BINGOcpu_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CPU_win"
        android:textColor="@android:color/holo_green_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numWinsCPU" />

    <TextView
        android:id="@+id/Draw_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Draw"
        android:textColor="@android:color/holo_green_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDraws" />

</androidx.constraintlayout.widget.ConstraintLayout>