<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="1"
    android:layout_column="0">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_table_only_portrait"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="4">

        <ImageView
            android:id="@+id/Regular_Bingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_regular_bingo" />

        <TextView
            android:id="@+id/Regular_Bingo_Text"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="bottom|center"
            android:text="@string/classic_bingo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/Full_House"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_full_house" />

        <TextView
            android:id="@+id/Full_House_Text"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="bottom|center"
            android:text="@string/full_house"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/X_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_x_makrs" />

        <TextView
            android:id="@+id/X_marks_Text"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="bottom|center"
            android:text="@string/x_marks_the_spot"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="bottom|center"
            android:text="@string/todo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/empty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/empty_text1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="bottom|center"
            android:text="@string/todo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/empty3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/empty_text2"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="bottom|center"
            android:text="@string/todo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </GridLayout>

</ScrollView>